fixed spacing between hexagons

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ button:hover {
     width: 100%;
     height: 100%;
     color: rgb(210, 201, 160);
+    aspect-ratio: 1 / 1;
     box-sizing: border-box;
 }
 
@@ -82,6 +83,7 @@ button:hover {
 
 .ring-container {
     position:absolute;
+    aspect-ratio: 1 / 1;
     top: 0;
     left: 0;
     bottom: 0;  
